--- a/templates/9.0/server.xml.j2
+++ b/templates/9.0/server.xml.j2
@@ -39,7 +39,7 @@
       SSLEnabled="true"
       >
         <UpgradeProtocol className="org.apache.coyote.http2.Http2Protocol" />
-        <SSLHostConfig>
+        <SSLHostConfig protocols="TLSv1.2">
           <Certificate certificateKeyFile="conf/localhost-rsa-key.pem"
                        certificateFile="conf/localhost-rsa-cert.pem"
                        certificateChainFile="conf/localhost-rsa-chain.pem"
