Improved linting - Yamllint, Rubocop
- Small cleanups for warnings by RuboCop

--- a/templates/tomcat.systemd.j2
+++ b/templates/tomcat.systemd.j2
@@ -27,6 +27,7 @@ Group={{ tomcat_group }}
 UMask=0007
 RestartSec=10
 Restart=always
+SuccessExitStatus=SIGKILL
 
 [Install]
 WantedBy=multi-user.target
