Log4J2 Configuration Fixed to refer to rolling appender

--- a/templates/log4j2-tomcat.xml.j2
+++ b/templates/log4j2-tomcat.xml.j2
@@ -13,12 +13,12 @@
       <PatternLayout>
         <pattern>%d{ISO8601} %p %c{1.} [%t] %m%n</pattern>
       </PatternLayout>
-    </File>
-
+    </RollingRandomAccessFileAppender>
   </Appenders>
+
   <Loggers>
     <Root level="DEBUG">
-      <AppenderRef ref="Console"/>
+      <AppenderRef ref="ROLLING"/>
     </Root>
   </Loggers>
 </Configuration>
