--- a/templates/tomcat.systemd.j2
+++ b/templates/tomcat.systemd.j2
@@ -5,7 +5,7 @@ After=syslog.target network.target
 [Service]
 Type=forking
 
-{% if tomcat_jdk_use %}
+{% if tomcat_jdk_use | bool %}
 Environment=JAVA_HOME={{ tomcat_java_home }}
 {% else %}
 Environment=JRE_HOME={{ tomcat_jre_home }}
@@ -15,16 +15,14 @@ Environment=CATALINA_PID={{ tomcat_catalina_base }}/temp/tomcat.pid
 Environment=CATALINA_HOME={{ tomcat_catalina_home }}
 Environment=CATALINA_BASE={{ tomcat_catalina_base }}
 Environment='CATALINA_OPTS={{ tomcat_catalina_opts | join(" ") }}'
-{% if tomcat_catalina_classpath | length > 0 %}
-# bootclasspath
-Environment='CLASSPATH={{ tomcat_catalina_classpath | join(":") }}'
-{% endif %}
+Environment=UMASK={{ tomcat_service_umask }}
+
 ExecStart={{ tomcat_catalina_home }}/bin/startup.sh
 ExecStop=/bin/kill -15 $MAINPID
 
 User={{ tomcat_user }}
 Group={{ tomcat_group }}
-UMask=0007
+UMask={{ tomcat_service_umask }}
 LimitNOFILE={{ tomcat_limit_nofile | int }}
 RestartSec=10
 Restart=always
