feat(deps): updated tomcat to 9.0.41
- Ansible for tests updated to 2.9.16
- Molecule for tests updated
- Pre-commits updated
- Tomcat updated to 9.0.41
- BREAKING: Set JDK/JRE home variables if not using the default JRE for the OS.
- BREAKING: Removed support for RedHat/CentOS 6

--- a/templates/tomcat.systemd.j2
+++ b/templates/tomcat.systemd.j2
@@ -6,9 +6,9 @@ After=syslog.target network.target
 Type=forking
 
 {% if tomcat_jdk_use | bool %}
-Environment=JAVA_HOME={{ tomcat_java_home }}
+Environment=JAVA_HOME={{ tomcat_jdk_home or _tomcat_default_jdk_home }}
 {% else %}
-Environment=JRE_HOME={{ tomcat_jre_home }}
+Environment=JRE_HOME={{ tomcat_jre_home or _tomcat_default_jre_home }}
 {% endif %}
 Environment='JAVA_OPTS={{ tomcat_java_opts | join(" ") }}'
 Environment=CATALINA_PID={{ tomcat_catalina_base }}/temp/tomcat.pid
